--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,25 @@
 .big_image_container img {
     opacity: 0;
     position: absolute;
+    object-fit: cover;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+.text_image {
+    position: absolute;
+    z-index: 99;
+    bottom: 10px;
+    right: 10px;
+    width: 50%;
+    text-align: right;
+    color: white;
+}
+
+.text_image > * {
+    display: none;
 }
 
 .scroll_image_container {
@@ -66,4 +81,12 @@
 
 .active {
     opacity: 1 !important;
+}
+
+.d_title_visible {
+    display: block;
+}
+
+.d_subtitle_visible {
+    display: block;
 }
