add border on selected img

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+body {
+    background-color: #060b29;
+}
+
+.main_carousel {
+    background-color: white;
+    box-shadow: 0 0 10px #2196f3, 0 0 40px #2196f3, 0 0 80px #2196f3;
+}
+
 .big_image_container {
     position: relative;
     width: 80%;
@@ -71,14 +80,6 @@
     transform: scale(1.2);
 }
 
-/* .big_image_container img.active {
-    opacity: 1;
-}
-
-.scroll_image img.active {
-    opacity: 1;
-} */
-
 .active {
     opacity: 1 !important;
 }
@@ -89,4 +90,8 @@
 
 .d_subtitle_visible {
     display: block;
+}
+
+.border_select {
+    border: 2px solid rgb(255, 255, 255);
 }
